# RiveSolutions_SEO_Spider

./: .gitattributes  .gitignore  3proxy.cfg  CMakeLists.txt  README.md  archive_and_deploy_on_yandex.bat  build_installer_win32.bat  build_installer_x64.bat  build_solution_win32.bat  build_solution_x64.bat  doxyfile.dxg  generate_doxygen_doc.bat  generate_solution_win32.bat  generate_solution_win32_without_tests.bat  generate_solution_x64.bat  generate_solution_x64_without_tests.bat  how_to_build.txt  project_dependencies.txt  update ts.bat  update_openssl.bat  update_ts.bat
common/: CMakeLists.txt
common/include/: auto_delete_later_ptr.h  command.h  common_constants.h  common_macro_helpers.h  constants.h  counted_ptr.h  debug_helpers_api.h  delegate.h  finally.h  forward_declaration_helper.h  handler_registry.h  helpers.h  iipc_signaled_object.h  ipc_command.h  ipc_server.h  ipc_server_wrapper.h  ipc_signaled_object_creator.h  ipc_signaled_object_unix_like.h  ipc_signaled_object_windows.h  ipc_socket.h  irequest.h  iresponse.h  irpc_server.h  irpc_socket.h  istatistic_counter.h  json_parser.h  json_parser_stream_reader.h  json_parser_stream_writer.h  load_request.h  load_response.h  loader.h  message.h  message_queue.h  meta_helpers.h  named_thread.h  pimpl_helper.h  pipe_message.h  pipe_server.h  qaes_encryption.h  qurl_hasher.h  (+20 more)
common/src/: command.cpp  debug_helpers_api.cpp  delegate.cpp  handler_registry.cpp  helpers.cpp  ipc_server.cpp  ipc_server_wrapper.cpp  ipc_signaled_object_creator.cpp  ipc_signaled_object_windows.cpp  ipc_socket.cpp  json_parser.cpp  json_parser_stream_reader.cpp  json_parser_stream_writer.cpp  load_request.cpp  load_response.cpp  loader.cpp  message.cpp  message_queue.cpp  named_thread.cpp  pipe_server.cpp  qaes_encryption.cpp  random_interval_range_timer.cpp  requester.cpp  response_code_description.cpp  rpc_factory.cpp  screenshot_maker_command.cpp  seo_spider_service_api_loader.cpp  smtp_sender.cpp  smtp_sending_result.cpp  smtpsender.cpp  smtpsendingresult.cpp  statistic_counter.cpp  status_code_description.cpp  tcp_server.cpp  tcp_socket.cpp  thread_queue.cpp  zippo.cpp
crawler/: CMakeLists.txt
crawler/include/: crawler_controller.h  crawler_page_info_acceptor.h  stdafx.h
crawler/src/: crawler_controller.cpp  crawler_page_info_acceptor.cpp
googletest/: .gitignore  CMakeLists.txt
gumbo/: CMakeLists.txt
logger/: CMakeLists.txt  LoggerMainWondow.ui
logger/include/: logger_application.h  logger_main_window.h  stdafx.h
logger/src/: logger_main_window.cpp  main.cpp
logger/ui/: logger_main_window.ui
quazip/: CMakeLists.txt
quazip/include/: crypt.h  quaadler32.h  quacrc32.h
quazip/src/: ioapi.c  qioapi.cpp  quacrc32.cpp  quazip.cpp  zip.c
quickiewebbot/: CMakeLists.txt
quickiewebbot/include/: abstract_factory.h  abstract_table_model.h  abstract_threadable_object.h  abstract_view_model.h  action_keys.h  action_registry.h  all_resources_widget.h  application.h  application_properties.h  application_settings.h  application_settings_model.h  application_settings_widget.h  background_renderer.h  constants.h  context_menu_data_collection_row.h  control_adaptor_check_box.h  control_adaptor_combo_box.h  control_adaptor_line_edit.h  control_adaptor_spin_box.h  control_binding.h  control_binding_check_box.h  control_panel_widget.h  crawler.h  crawler_control_widget.h  crawler_controller.h  crawler_page_info_acceptor.h  crawler_progress_bar.h  crawler_settings_widget.h  crawler_storage.h  crawler_worker_thread.h  data_collection.h  data_collection_groups_factory.h  data_pages_widget.h  debug_helpers_api.h  debug_info_web_page_widget.h  default_column_resize_policy.h  delegate.h  dll_loader.h  downloader.h  errors_filter_widget.h  (+157 more)
quickiewebbot/rcc/: main_frame.qrc  quickiewebbot.qrc
quickiewebbot/src/: abstract_table_model.cpp  abstract_threadable_object.cpp  abstract_view_model.cpp  action_registry.cpp  all_resources_widget.cpp  application.cpp  application_properties.cpp  application_settings.cpp  application_settings_model.cpp  application_settings_widget.cpp  background_renderer.cpp  context_menu_data_collection_row.cpp  control_adaptor_check_box.cpp  control_adaptor_combo_box.cpp  control_adaptor_line_edit.cpp  control_adaptor_spin_box.cpp  control_binding.cpp  control_panel_widget.cpp  crawler.cpp  crawler_control_widget.cpp  crawler_controller.cpp  crawler_page_info_acceptor.cpp  crawler_progress_bar.cpp  crawler_settings_widget.cpp  crawler_storage.cpp  crawler_worker_thread.cpp  data_collection.cpp  data_collection_groups_factory.cpp  data_pages_widget.cpp  debug_helpers_api.cpp  debug_info_web_page_widget.cpp  default_column_resize_policy.cpp  delegate.cpp  dll_loader.cpp  downloader.cpp  errors_filter_widget.cpp  filter_widget.cpp  full_size_resize_policy.cpp  grid_data_accessor_all_items.cpp  grid_data_accessor_factory.cpp  (+118 more)
quickiewebbot/ui/: application_settings_widget.ui  control_panel.ui  control_panel_widget.ui  crawler_control_widget.ui  crawler_limits.ui  crawler_settings.ui  crawler_settings_widget.ui  errors_filter.ui  errors_filter_widget.ui  limits_settings.ui  limits_settings_widget.ui  main_frame.ui  message_box_dialog.ui  navigation_panel.ui  preferences_settings.ui  preferences_settings_widget.ui  proxy_settings.ui  proxy_settings_dialog.ui  proxy_settings_widget.ui  splash_screen.ui  splash_screen_widget.ui  start_screen.ui  summary_filter_widget.ui  widget_under_mouse_info_dialog.ui
qxtsmtp/: CMakeLists.txt  qxtsmtp.pri  qxtsmtp.pro
qxtsmtp/include/: qxtglobal.h  qxtmailattachment.h
qxtsmtp/src/: qxtmailattachment.cpp  qxtmailmessage.cpp
seospiderserviceapi/: CMakeLists.txt
seospiderserviceapi/include/: additional_dump_data.h  crash_handler.h  crash_handler_stub.h  default_logger_filter.h  icrash_handler.h  ilogger.h  ilogger_filter.h  iseo_spider_service_api.h  log_filter.h  log_message_buffer.h  log_server_data_accumulator.h  log_writer.h  log_writer_thread.h  (+7 more)
version/: CMakeLists.txt  SetVersion.cmake  SetVersion.cmake.in
watchdogapi/: CMakeLists.txt
watchdogservice/: CMakeLists.txt
(+1313 files in other folders)
